# Auxilium

backend/announcements/: Dockerfile  pyproject.toml
backend/announcements/placy/: __init__.py  __main__.py  config.py  controller.py  models.py  placy.py  repo.py  response.py  router.py
backend/announcements/tests/: __init__.py  announcement_test.py  simple_test.py
backend/authentication/: Dockerfile
backend/authentication/placy/: __main__.py
backend/community/: docker-compose.yml  package.json
backend/community/src/api/: index.ts
backend/community/src/config/: index.ts
backend/community/src/constants/: enums.ts
backend/community/src/interfaces/: IAnnouncement.ts  IComment.ts  ICommunity.ts  IEmail.ts  IKafka.ts  IPost.ts  ITag.ts  IToken.ts  IUser.ts  IUserCommunity.ts
backend/community/src/jobs/: index.ts  tags.ts
backend/community/src/loaders/: cache.ts  dependencyInjector.ts  express.ts  index.ts  kafka.ts  logger.ts  mailer.ts  mongoose.ts
backend/community/src/models/: announcement.ts  comment.ts  community.ts  post.ts  tag.ts  user.ts  userCommunity.ts
backend/community/src/repositories/: announcementRepository.ts  commentRepository.ts  communityRepository.ts  postRepository.ts  tagRepository.ts  userCommunityRepository.ts  userRepository.ts
backend/community/src/services/: authService.ts  (+8 more)
client/: package.json
client/src/components/: Scrollable.js
client/src/config/: index.js
client/src/dummy-data/: feedData.js
client/src/navigation/: Drawer.js  index.js  index.web.js  linking.js
client/src/utils/: mockDelayedResponse.js
(+41 files in other folders)
