[tool.poetry]
name = "announcements"
version = "0.1.0"
description = "Announcements API for Placy"
authors = ["pspiagicw <pspiagicw@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
mongoengine = "^0.25.0"
pdoc = "^12.3.0"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.0"
pydocstyle = "^6.1.1"
faker = "^16.6.0"

[tool.poe.tasks]
test = "pytest"
run = "python -m placy"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
